--- a/style.css
+++ b/style.css
@@ -1,13 +1,63 @@
 .static-box{
     position: static;
+    height: 80px;
+    width: 80px;
+    background-color: red;
+    border: 2px solid black;
+    padding: 2px;
 }
 
 .relative-box{
     position:relative;
     left:30px;
     top: 20px;
+    height: 80px;
+    width: 80px;
+    background-color: blue;
+    border: 2px solid black;
+    padding: 2px;
 }
 
 .absolute-box{
     position: absolute;
+    top: 10px;
+    left: 15px;
+    height: 80px;
+    width: 80px;
+    background-color: green;
+    border: 2px solid black;
+    padding: 2px;
+}
+
+.fixed-box{
+    position: fixed;
+    height: 80px;
+    width: 80px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: blueviolet;
+    bottom: 10px;
+    right: 10px;
+}
+
+.sticky-box{
+    position: sticky;
+    height: 80px;
+    width: 80px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: yellow;
+    top: 0px;
+    right: 0px;
+
+}
+
+.background-image{
+
+    height: 80px;
+    width: 80px;
+    border: 2px solid black;
+    padding: 2px;
+    
+
 }
