--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .static-box{
     position: static;
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
     background-color: red;
     border: 2px solid black;
     padding: 2px;
@@ -11,8 +11,8 @@
     position:relative;
     left:30px;
     top: 20px;
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
     background-color: blue;
     border: 2px solid black;
     padding: 2px;
@@ -22,8 +22,8 @@
     position: absolute;
     top: 10px;
     left: 15px;
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
     background-color: green;
     border: 2px solid black;
     padding: 2px;
@@ -31,8 +31,8 @@
 
 .fixed-box{
     position: fixed;
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
     border: 2px solid black;
     padding: 2px;
     background-color: blueviolet;
@@ -42,22 +42,53 @@
 
 .sticky-box{
     position: sticky;
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
     border: 2px solid black;
     padding: 2px;
     background-color: yellow;
     top: 0px;
-    right: 0px;
+    right:0px;
 
 }
 
 .background-image{
 
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
     border: 2px solid black;
     padding: 2px;
-    
+    background-image: url(https://th.bing.com/th/id/OIP.N_MgeEAgz3C61hFZqczYpAHaE7?rs=1&pid=ImgDetMain);
+    background-size: cover;
 
+}
+
+.background-image-repeat{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    padding: 2px;
+    background-image: url(https://th.bing.com/th/id/OIP.N_MgeEAgz3C61hFZqczYpAHaE7?rs=1&pid=ImgDetMain);
+    background-repeat: repeat-x;
+    background-repeat: repeat-y;
+}
+
+.box1{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: orange;
+    z-index: 1;
+}
+
+.box2{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color:brown;
+    margin-left: 20px;
+    margin-top: -10px ;
+    z-index: 2;
 }
