--- a/style.css
+++ b/style.css
@@ -194,4 +194,61 @@
     background-color: purple;
 }
 
+#container4{
+    width:600px;
+    height: 400px;
+    background-color: white;
+    border: 4px,black,solid;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+#boxJ{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: pink;
+}
+
+#boxK{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: gray;
+}
+
+#boxL{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: purple;
+}
+#boxM{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: pink;
+}
+
+#boxN{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: gray;
+}
+
+#boxO{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: purple;
+}
+
 
