--- a/style.css
+++ b/style.css
@@ -283,3 +283,14 @@
     padding: 2px;
     background-color: purple;
 }
+
+#container6{
+    width:600px;
+    height: 400px;
+    background-color: white;
+    border: 4px,black,solid;
+    display: flex;
+    flex-direction: column;
+    align-content:space-evenly;
+}
+
